feat(platform-resources): move setup sql scripts to SP (#3169)
* feat(platform-resources): move setup sql scripts to SP
* chore(platform-resources): change sql scripts permissions to 644
* chore(platform-setup): run integration tests on all databases
* chore(junit): use junit vintage on all subprojects
* chore(junit): add junit deps to all subprojects
* fix(test): ensure context ClassLoader is reset after test
* chore(platform-setup): copy sql files to distrib zip file
* feat(test): exclude tests by tags
---------
Co-authored-by: Romain Bioteau <romain.bioteau@bonitasoft.com>