@@ -13,7 +13,7 @@
  **/
 package org.bonitasoft.engine.business.data.impl;
 
-import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
 import java.io.Serializable;
@@ -41,9 +41,7 @@ import org.bonitasoft.engine.business.data.proxy.ServerLazyLoader;
 import org.bonitasoft.engine.business.data.proxy.ServerProxyfier;
 import org.bonitasoft.engine.commons.TypeConverterUtil;
 import org.junit.Before;
-import org.junit.Rule;
 import org.junit.Test;
-import org.junit.rules.ExpectedException;
 import org.junit.runner.RunWith;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Mock;
@@ -58,8 +56,6 @@ public class BusinessDataServiceImplTest {
     private static final String PARAMETER_BUSINESSDATA_CLASS_URI_VALUE = "/businessdata/{className}/{id}/{field}";
     private static final String NEW_NAME = "new name";
     private final Entity pojo = new EntityPojo(1L);
-    @Rule
-    public ExpectedException expectedException = ExpectedException.none();
     @Mock
     JsonBusinessDataSerializer jsonEntitySerializer;
     @Mock
@@ -73,78 +69,84 @@ public class BusinessDataServiceImplTest {
     private Entity businessData;
     @Mock
     private CountQueryProvider countQueryProvider;
-    private TypeConverterUtil typeConverterUtil;
 
     @Before
-    public void before() throws Exception {
+    public void before() {
         final String[] datePatterns = new String[] { "yyyy-MM-dd HH:mm:ss", "yyyy-MM-dd'T'HH:mm:ss", "yyyy-MM-dd",
                 "HH:mm:ss", "yyyy-MM-dd'T'HH:mm:ss.SSS" };
-        typeConverterUtil = new TypeConverterUtil(datePatterns);
         businessDataService = spy(new BusinessDataServiceImpl(businessDataRepository, jsonEntitySerializer,
-                businessDataModelRepository, typeConverterUtil,
+                businessDataModelRepository, new TypeConverterUtil(datePatterns),
                 businessDataReloader, countQueryProvider));
     }
 
     @Test
-    public void isBusinessDataShouldBeTrue() throws Exception {
-
-        final Entity pojo = new EntityPojo(1L);
+    public void isBusinessDataShouldBeTrue() {
         assertThat(businessDataService.isBusinessData(pojo)).isTrue();
     }
 
     @Test
-    public void isBusinessDataShouldBeTrueWithList() throws Exception {
-        assertThat(businessDataService.isBusinessData(Arrays.asList(pojo))).isTrue();
+    public void isBusinessDataShouldBeTrueWithList() {
+        assertThat(businessDataService.isBusinessData(List.of(pojo))).isTrue();
         assertThat(businessDataService.isBusinessData(new ArrayList<String>())).isTrue();
     }
 
     @Test
-    public void isBusinessDataShouldBeFalseWithList() throws Exception {
+    public void isBusinessDataShouldBeFalseWithList() {
         assertThat(businessDataService.isBusinessData("not a list")).isFalse();
-        assertThat(businessDataService.isBusinessData(Arrays.asList(new Long(1L)))).isFalse();
+        assertThat(businessDataService.isBusinessData(List.of(1L))).isFalse();
     }
 
     @Test
-    public void isBusinessDataShouldBeFalse() throws Exception {
-        final Object pojo = new Object();
-        assertThat(businessDataService.isBusinessData(pojo)).isFalse();
+    public void isBusinessDataShouldBeFalse() {
+        final Object pojoObject = new Object();
+        assertThat(businessDataService.isBusinessData(pojoObject)).isFalse();
     }
 
     @Test
-    public void isBusinessDataShouldBeFalseWhenDataIsNull() throws Exception {
+    public void isBusinessDataShouldBeFalseWhenDataIsNull() {
         assertThat(businessDataService.isBusinessData(null)).isFalse();
 
     }
 
-    @Test(expected = SBusinessDataNotFoundException.class)
+    @Test
     public void callJavaOperationShouldThrowExceptionWhenBusinessDataIsNull() throws Exception {
-        businessDataService.callJavaOperation(null, new EntityPojo(1L), "someMethod", String.class.getName());
+        assertThatExceptionOfType(SBusinessDataNotFoundException.class)
+                .isThrownBy(() -> businessDataService.callJavaOperation(null, new EntityPojo(1L), "someMethod",
+                        String.class.getName()));
     }
 
     @Test
-    public void callJavaOperationShouldInvokeListMethod() throws Exception {
+    public void callJavaOperationShouldInvokeListMethod() {
         final List<Entity> entities = new ArrayList<>();
         entities.add(new EntityPojo(1L));
-        businessDataService.callJavaOperation(entities, entities, "contains", Object.class.getName());
+        assertThatNoException()
+                .isThrownBy(() -> businessDataService.callJavaOperation(entities, entities, "contains",
+                        Object.class.getName()));
     }
 
-    @Test(expected = SBusinessDataRepositoryException.class)
-    public void callJavaOperationShouldThrowExceptionWhenNotAnEntity() throws Exception {
-        businessDataService.callJavaOperation("not an entity", null, "getLengh", String.class.getName());
+    @Test
+    public void callJavaOperationShouldThrowExceptionWhenNotAnEntity() {
+        assertThatExceptionOfType(SBusinessDataRepositoryException.class)
+                .isThrownBy(() -> businessDataService.callJavaOperation("not an entity", null, "getLengh",
+                        String.class.getName()));
     }
 
-    @Test(expected = SBusinessDataNotFoundException.class)
+    @Test
     public void callJavaOperationShouldThrowExceptionWhenBusinessDataIsNotFound() throws Exception {
         //given
         doThrow(SBusinessDataNotFoundException.class).when(businessDataReloader).reloadEntitySoftly(pojo);
 
         //when
-        businessDataService.callJavaOperation(pojo, new EntityPojo(1L), "getName", String.class.getName());
+        assertThatExceptionOfType(SBusinessDataNotFoundException.class)
+                .isThrownBy(() -> businessDataService.callJavaOperation(pojo, new EntityPojo(1L), "getName",
+                        String.class.getName()));
     }
 
-    @Test(expected = SBusinessDataRepositoryException.class)
+    @Test
     public void callJavaOperationShouldThrowExceptionWheninvokeFails() throws Exception {
-        businessDataService.callJavaOperation(pojo, new EntityPojo(1L), "someMethod", String.class.getName());
+        assertThatExceptionOfType(SBusinessDataRepositoryException.class)
+                .isThrownBy(() -> businessDataService.callJavaOperation(pojo, new EntityPojo(1L), "someMethod",
+                        String.class.getName()));
     }
 
     @Test
@@ -189,26 +191,25 @@ public class BusinessDataServiceImplTest {
 
         assertThat(pojoObject).as("should return object").isNotNull();
         assertThat(pojoObject.getCompositionEntity()).as("should have set entity").isEqualTo(compositionEntity);
-        verify(businessDataRepository, never()).findById(compositionEntity.getClass(),
-                compositionEntity.getPersistenceId());
+        verify(businessDataReloader, never()).reloadEntity(any(Entity.class));
     }
 
     @Test
     public void callJavaOperationShouldSetEntityAggregation() throws Exception {
         //given
-        final EntityPojo compositionEntity = new EntityPojo(2L);
+        final EntityPojo aggregationEntity = new EntityPojo(2L);
 
         doReturn(pojo).when(businessDataReloader).reloadEntitySoftly(pojo);
+        doReturn(aggregationEntity).when(businessDataReloader).reloadEntity(aggregationEntity);
 
         //when
-        final EntityPojo pojoObject = (EntityPojo) businessDataService.callJavaOperation(pojo, compositionEntity,
-                "setCompositionEntity",
+        final EntityPojo pojoObject = (EntityPojo) businessDataService.callJavaOperation(pojo, aggregationEntity,
+                "setAggregationEntity",
                 Entity.class.getName());
 
         assertThat(pojoObject).as("should return object").isNotNull();
-        assertThat(pojoObject.getCompositionEntity()).as("should have set entity").isEqualTo(compositionEntity);
-        verify(businessDataRepository, never()).findById(compositionEntity.getClass(),
-                compositionEntity.getPersistenceId());
+        assertThat(pojoObject.getAggregationEntity()).as("should have set entity").isEqualTo(aggregationEntity);
+        verify(businessDataReloader).reloadEntity(aggregationEntity);
     }
 
     @Test
@@ -295,7 +296,7 @@ public class BusinessDataServiceImplTest {
     }
 
     @Test
-    public void callJavaOperationShouldThrowExceptionWhenPersistenceIdIsNull() throws Exception {
+    public void callJavaOperationShouldThrowExceptionWhenPersistenceIdIsNull() {
         //given
         final Long persistenceId1 = 1562L;
 
@@ -304,21 +305,18 @@ public class BusinessDataServiceImplTest {
         final List<EntityPojo> entities = Arrays.asList(entity1, entity2);
         doReturn(EntityPojo.class).when(businessDataReloader).getEntityRealClass(entity2);
 
-        // expect
-        expectedException.expect(SBusinessDataNotFoundException.class);
-        expectedException.expectMessage(
-                "Forbidden instance of org.bonitasoft.engine.business.data.impl.EntityPojo found. It is only possible to reference persisted instances in an aggregation relation.");
-
-        //when
-        businessDataService.callJavaOperation(pojo, entities, "setAggregationEntities", List.class.getName());
+        //when - then
+        assertThatExceptionOfType(SBusinessDataNotFoundException.class)
+                .isThrownBy(() -> businessDataService.callJavaOperation(pojo, entities, "setAggregationEntities",
+                        List.class.getName()))
+                .withMessage("Forbidden instance of org.bonitasoft.engine.business.data.impl.EntityPojo found. " +
+                        "It is only possible to reference persisted instances in an aggregation relation.");
     }
 
     @Test
     public void callJavaOperationWithEmptyList() throws Exception {
         //given
-        final List<EntityPojo> entities = Arrays.asList();
-        final List<Long> keys = Arrays.asList();
-
+        final List<EntityPojo> entities = List.of();
         doReturn(pojo).when(businessDataReloader).reloadEntitySoftly(pojo);
 
         //when
@@ -369,8 +367,8 @@ public class BusinessDataServiceImplTest {
         final EntityPojo entityPojo = new EntityPojo(1L);
         entityPojo.getAggregationEntities().add(entity1);
 
-        final List<EntityPojo> newEntities = Arrays.asList(entity2);
-        final List<Long> keys2 = Arrays.asList(persistenceId2);
+        final List<EntityPojo> newEntities = List.of(entity2);
+        final List<Long> keys2 = List.of(persistenceId2);
         doReturn(entityPojo).when(businessDataReloader).reloadEntitySoftly(entityPojo);
         // Cannot specify the real instance (instead of any()) because of proxy object that does not match (Mockito):
         doReturn(pojo.getClass()).when(businessDataReloader).getEntityRealClass(any(Entity.class));
@@ -395,12 +393,10 @@ public class BusinessDataServiceImplTest {
         assertThat(loadClass).isEqualTo(pojo.getClass());
     }
 
-    @Test(expected = SBusinessDataRepositoryException.class)
-    public void should_loadClass_throw_exception() throws Exception {
-        //when
-        businessDataService.loadClass("not a class");
-
-        //then exception
+    @Test
+    public void should_loadClass_throw_exception() {
+        assertThatExceptionOfType(SBusinessDataRepositoryException.class)
+                .isThrownBy(() -> businessDataService.loadClass("not a class"));
     }
 
     @Test
@@ -417,7 +413,7 @@ public class BusinessDataServiceImplTest {
 
     }
 
-    @Test(expected = SBusinessDataRepositoryException.class)
+    @Test
     public void should_getJsonEntity_throw_exception() throws Exception {
         //given
         doReturn(pojo).when(businessDataRepository).findById(pojo.getClass(), pojo.getPersistenceId());
@@ -425,8 +421,9 @@ public class BusinessDataServiceImplTest {
                 PARAMETER_BUSINESSDATA_CLASS_URI_VALUE);
 
         //when then exception
-        businessDataService.getJsonEntity(pojo.getClass().getName(), pojo.getPersistenceId(),
-                PARAMETER_BUSINESSDATA_CLASS_URI_VALUE);
+        assertThatExceptionOfType(SBusinessDataRepositoryException.class)
+                .isThrownBy(() -> businessDataService.getJsonEntity(pojo.getClass().getName(), pojo.getPersistenceId(),
+                        PARAMETER_BUSINESSDATA_CLASS_URI_VALUE));
     }
 
     @Test
@@ -541,10 +538,6 @@ public class BusinessDataServiceImplTest {
 
     @Test
     public void getJsonQueryEntities_should_throw_exception_when_query_not_found() throws Exception {
-        expectedException.expect(SBusinessDataRepositoryException.class);
-        expectedException
-                .expectMessage("unable to get query wrongQuery for business object " + EntityPojo.class.getName());
-
         //given
         final EntityPojo entity = new EntityPojo(1562L);
         final Map<String, Serializable> parameters = new HashMap<>();
@@ -558,8 +551,10 @@ public class BusinessDataServiceImplTest {
         doReturn(businessObjectModel).when(businessDataModelRepository).getBusinessObjectModel();
 
         //when then exception
-        businessDataService.getJsonQueryEntities(entity.getClass().getName(), "wrongQuery", parameters, 0, 10,
-                PARAMETER_BUSINESSDATA_CLASS_URI_VALUE);
+        assertThatExceptionOfType(SBusinessDataRepositoryException.class)
+                .isThrownBy(() -> businessDataService.getJsonQueryEntities(entity.getClass().getName(), "wrongQuery",
+                        parameters, 0, 10, PARAMETER_BUSINESSDATA_CLASS_URI_VALUE))
+                .withMessage("unable to get query wrongQuery for business object " + EntityPojo.class.getName());
     }
 
     @Test
@@ -575,7 +570,6 @@ public class BusinessDataServiceImplTest {
         doReturn(entity.getClass()).when(businessDataService).loadClass(entity.getClass().getName());
         final BusinessObjectModel businessObjectModel = getBusinessObjectModel(entity);
         doReturn(businessObjectModel).when(businessDataModelRepository).getBusinessObjectModel();
-        //        Query findQuery=new Query("find","query");
         Query countQuery = new Query("countForFind", "query", Long.class.getName());
         doReturn(countQuery).when(countQueryProvider).getCountQueryDefinition(any(BusinessObject.class),
                 any(Query.class));
@@ -606,12 +600,6 @@ public class BusinessDataServiceImplTest {
 
     @Test
     public void getJsonQueryEntities_should_check_parameters() throws Exception {
-        expectedException.expect(SBusinessDataRepositoryException.class);
-        expectedException.expectMessage("parameter(s) are missing for query named query :");
-        expectedException.expectMessage(PARAMETER_INTEGER);
-        expectedException.expectMessage(PARAMETER_STRING);
-        expectedException.expectMessage(PARAMETER_LONG);
-
         //given
         final EntityPojo entity = new EntityPojo(1562L);
         doReturn(entity.getClass()).when(businessDataService).loadClass(entity.getClass().getName());
@@ -620,8 +608,11 @@ public class BusinessDataServiceImplTest {
         doReturn(businessObjectModel).when(businessDataModelRepository).getBusinessObjectModel();
 
         //when then exception
-        businessDataService.getJsonQueryEntities(entity.getClass().getName(), "query", null, 0, 10,
-                PARAMETER_BUSINESSDATA_CLASS_URI_VALUE);
+        assertThatExceptionOfType(SBusinessDataRepositoryException.class)
+                .isThrownBy(() -> businessDataService.getJsonQueryEntities(entity.getClass().getName(), "query", null,
+                        0, 10, PARAMETER_BUSINESSDATA_CLASS_URI_VALUE))
+                .withMessageContainingAll("parameter(s) are missing for query named query :", PARAMETER_INTEGER,
+                        PARAMETER_STRING, PARAMETER_LONG);
     }
 
     private BusinessObjectModel getBusinessObjectModel(final EntityPojo entity) {
@@ -635,7 +626,7 @@ public class BusinessDataServiceImplTest {
 
         final BusinessObject businessObject = new BusinessObject();
         businessObject.setQualifiedName(entity.getClass().getName());
-        businessObject.setQueries(Arrays.asList(query));
+        businessObject.setQueries(List.of(query));
         businessObjectModel.getBusinessObjects().add(businessObject);
 
         return businessObjectModel;
@@ -661,7 +652,7 @@ public class BusinessDataServiceImplTest {
         verify(jsonEntitySerializer).serializeEntities(pojos, PARAMETER_BUSINESSDATA_CLASS_URI_VALUE);
     }
 
-    @Test(expected = SBusinessDataRepositoryException.class)
+    @Test
     public void getJsonEntities_should_throw_exception_if_the_serialization_fails() throws Exception {
         final long identifier1 = 1983L;
         final long identifier2 = 1990L;
@@ -677,8 +668,9 @@ public class BusinessDataServiceImplTest {
         when(jsonEntitySerializer.serializeEntities(pojos, PARAMETER_BUSINESSDATA_CLASS_URI_VALUE))
                 .thenThrow(new SBusinessDataRepositorySerializationException("exception"));
 
-        businessDataService.getJsonEntities(EntityPojo.class.getName(), identifiers,
-                PARAMETER_BUSINESSDATA_CLASS_URI_VALUE);
+        assertThatExceptionOfType(SBusinessDataRepositoryException.class)
+                .isThrownBy(() -> businessDataService.getJsonEntities(EntityPojo.class.getName(), identifiers,
+                        PARAMETER_BUSINESSDATA_CLASS_URI_VALUE));
     }
 
 }
